fix: white buttons are invisible on a bright background

--- a/css/3dapplier.css
+++ b/css/3dapplier.css
@@ -6,7 +6,7 @@
 
 :root {
     --bg: rgb(22, 22, 26);
-    --bg-opacity: rgba(22, 22, 26, 0.75);
+    --bg-opacity: rgba(22, 22, 26, 0.5);
     --bc: rgb(13, 13, 15);
     --control-color: rgb(43, 43, 44);
     --panel-padding: 20px;
@@ -123,7 +123,8 @@ a {
 }
 
 .functions_separated {
-    background-color: unset;
+    background-color: var(--bg-opacity);
+    border-radius: 0;
     position: fixed;
     right: 0;
     height: 100dvh;
